--- a/shaded-strimzi-kafka-oauth-client/pom.xml
+++ b/shaded-strimzi-kafka-oauth-client/pom.xml
@@ -42,6 +42,12 @@
             <groupId>io.strimzi</groupId>
             <artifactId>kafka-oauth-client</artifactId>
             <version>${strimzi.kafka-oauth-client.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
