--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <fabric8.kubernetes-client.version>7.3.1</fabric8.kubernetes-client.version>
     <flink.avro.confluent.registry.version>2.0.0</flink.avro.confluent.registry.version>
     <flink.kafka.connector.version>4.0.1-2.0</flink.kafka.connector.version>
+    <strimzi.kafka-oauth-client.version>0.16.2</strimzi.kafka-oauth-client.version>
 
     <!-- Test only dependencies -->
     <mockito.version>5.19.0</mockito.version>
@@ -44,6 +45,7 @@
   </properties>
 
   <modules>
+      <module>shaded-strimzi-kafka-oauth-client</module>
       <module>flink-sql-runner</module>
       <module>flink-sql-runner-dist</module>
   </modules>
